# pi-azure-iot-pnp-example

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt  RaspberryPiSenseHatB.json  RaspberryPiSenseHatB_simple.json  main.c
cmake/: AddAzureSDKforC.cmake  pi-zero-gcc-toolchain.cmake
core/: CMakeLists.txt
core/raspberry-pi-sense-hat/: LPS22HB.c  LPS22HB.h  SHTC3.c  SHTC3.h
tools/: build_app_raspberry.sh
